Bug 149818 - Double-clicking not working (kf5)
Summary: Double-clicking not working (kf5)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: x86-64 (AMD64) Linux (All)
: medium minor
Assignee: Michael Weghorn
URL:
Whiteboard: target:7.5.0
Keywords: bibisected, bisected, regression
: 149794 150303 (view as bug list)
Depends on:
Blocks: KDE, KF5
  Show dependency treegraph
 
Reported: 2022-07-02 11:13 UTC by Buovjaga
Modified: 2022-08-09 09:25 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Buovjaga 2022-07-02 11:13:45 UTC
Use kf5 and in the Options dialog, try to double-click a tree like Language Settings.

Bibisected with linux-64-7.5 to
https://git.libreoffice.org/core/commit/393c9f736b10d1ea82979e9c2c43c8f91ba5831d
Qt use QEvent::type to handle the event correctly
Comment 1 Buovjaga 2022-07-03 05:49:33 UTC
Generalising summary as double-clicking does not seem to work anywhere, for example selecting a word. A clue to what is going on: triple-clicking gives the same effect as double-clicking - is the first click swallowed somehow?
Comment 2 Buovjaga 2022-07-03 22:31:06 UTC
*** Bug 149794 has been marked as a duplicate of this bug. ***
Comment 3 Julien Nabet 2022-08-08 18:56:09 UTC
*** Bug 150303 has been marked as a duplicate of this bug. ***
Comment 4 Michael Weghorn 2022-08-09 07:04:26 UTC
(In reply to Buovjaga from comment #1)
> Generalising summary as double-clicking does not seem to work anywhere, for
> example selecting a word. A clue to what is going on: triple-clicking gives
> the same effect as double-clicking - is the first click swallowed somehow?

It's the second one that's swallowed.
Pending fix: https://gerrit.libreoffice.org/c/core/+/138006
Comment 5 Commit Notification 2022-08-09 08:01:00 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1703c3bb70b1faa522c33ebdc1a8f353c60367e5

tdf#149818 qt: Handle double mouse click again

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Buovjaga 2022-08-09 09:25:39 UTC
Thanks, that works

Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: 33c8c9d0dc8e76bc7dacb92175047a89f7d39a3c
CPU threads: 8; OS: Linux 5.18; UI render: default; VCL: kf5 (cairo+xcb)
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: threaded