tdf#149818 qt: Handle double mouse click again

Qt has `QEvent::MouseButtonDblClick` as a specialized
type for "Mouse press again" [1] in addition to
just `QEvent::MouseButtonPress` for a single click.
Handle that as mouse button down event in LO as well,
to make handling of double-click work again after

    commit 393c9f736b10d1ea82979e9c2c43c8f91ba5831d
    Date:   Tue Apr 19 16:00:31 2022 +0200

        Qt use QEvent::type to handle the event correctly

[1] https://doc.qt.io/qt-6/qevent.html

Change-Id: I9964b554bf71f30861ed0868e7a8000c84de50ac
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/138006
Tested-by: Jenkins
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>